<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
		android:background="#EFEFEF"
		android:padding="20dp"
    tools:context=".IndexActivity" >

    <ImageView 
        android:layout_width="fill_parent"
        android:scaleType="fitXY"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_desc"
        android:layout_marginTop="100dp"
        android:src="@drawable/coolworld_logo"/>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
				android:layout_centerVertical="true"
				android:layout_marginTop="20dp"
        android:padding="20dp">
        
		    <TextView 
		        android:id="@+id/signinHeader"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/signinHeaderString"
		        android:textStyle="bold"
		        android:textColor="#000"
   			    android:gravity="center_horizontal"
		        android:textSize="30sp"/>

   			<EditText 
   		  		android:id="@+id/usernameField"  	
   		  		android:layout_marginTop="50dp"
		    		android:layout_width="fill_parent"
		    		android:layout_height="wrap_content"
  	    		android:hint="@string/signinUsernameFieldHint"/>

   			<EditText 
   		  		android:id="@+id/passwordField" 
   		  		android:inputType="textPassword" 	
		    		android:layout_width="fill_parent"
		    		android:layout_height="wrap_content"
  	    		android:hint="@string/signinPasswordFieldHint"/>
   	
   			<LinearLayout 
   			    android:layout_width="fill_parent"
   			    android:layout_height="wrap_content"
   			    android:layout_marginTop="20dp"
   			    android:paddingLeft="100dp"
   			    android:paddingRight="100dp">
   			    
   			    <Button 
   			        android:id="@+id/signinButton"
   			        android:layout_width="fill_parent"
   			        android:layout_height="wrap_content"
   			        android:text="@string/signinButtonString"/>
   			</LinearLayout>				    
   			
   			<TextView 
   			    android:id="@+id/forgotPasswordText"
   			    android:layout_width="fill_parent"
   			    android:layout_height="wrap_content"
   			    android:gravity="center_horizontal"
	        	android:textColor="#565656"
	        	android:layout_marginTop="20dp"
	        	android:textSize="20sp"
   			    android:text="@string/signinForgotPasswordString"/>
   			
   			<TextView 
   			    android:id="@+id/signupText"
   			    android:layout_width="fill_parent"
   			    android:layout_height="wrap_content"
   			    android:gravity="center_horizontal"
	        	android:textColor="#565656"
	        	android:layout_marginTop="20dp"
	        	android:textSize="20sp"
     			  android:text="@string/signupSigninString"/>
			
    </LinearLayout>
    
</RelativeLayout>
