<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
		android:background="@drawable/index_bg"
		android:padding="20dp"
    tools:context=".IndexActivity" >

    <ImageView 
        android:layout_width="fill_parent"
        android:scaleType="fitXY"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_desc"
        android:layout_marginTop="100dp"
        android:src="@drawable/coolworld_logo"/>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        
        <TextView 
            android:id="@+id/welcomeTextHeader"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
						android:layout_width="fill_parent"
						android:gravity="center_horizontal"
            android:text="@string/welcomeTextHeader"/>
        
        <TextView 
            android:id="@+id/welcomeTextBody"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
						android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/welcomeTextBody"/>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal">
	
            <Button 
                android:id="@+id/signinButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@android:attr/buttonBarButtonStyle"
                android:text="@string/signinButtonString"/>
            
            <Button 
                android:id="@+id/signupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@android:attr/buttonBarButtonStyle"
	              android:text="@string/signupButtonString"/>
            
        </LinearLayout>

        <Button 
            android:id="@+id/apuriButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
						android:gravity="center_horizontal"
	          android:text="@string/apuriButtonString"/>
            
        <TextView 
            android:id="@+id/creditsText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
						android:gravity="center_horizontal"
						android:layout_marginTop="100dp"
            android:textAlignment="center"
            android:text="@string/creditText"/>
    </LinearLayout>
</RelativeLayout>
