<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:background="#EFEFEF">
     
  <LinearLayout 
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:orientation="horizontal">
      
    <ImageView 
       android:id="@+id/backButton"
       android:layout_height="fill_parent"
       android:layout_width="0dp"
       android:layout_weight="1"
       android:src="@drawable/backbtn"
       android:contentDescription="@string/listNodeImage"/>
      
  	<ImageView 	
			android:id="@+id/listview_header_image"
	    android:layout_height="wrap_content"
	    android:layout_width="0dp"
			android:layout_weight="3"
	    android:contentDescription="@string/logo_desc"
	    android:src="@drawable/coolworld_logo"/>  
	    
  	<ImageView 
  	  android:id="@+id/accountButton"
  	  android:layout_height="fill_parent"
  	  android:layout_width="0dp"
  	  android:layout_weight="1"
  	  android:contentDescription="@string/listNodeImage"
  	  android:src="@drawable/account"/>
    
  </LinearLayout>  
    
  <ImageView 
    android:id="@+id/frontCover"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:contentDescription="@string/listNodeImage"/>  
  
	<TextView 
    android:id="@+id/listview_description"
	  android:layout_height="wrap_content"
	  android:layout_width="fill_parent"
	  android:paddingTop="5dp"
		android:padding="5dp"
	  android:text="@string/countrySelectDescription"/>
	
	<ListView
		android:id="@+id/list"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:divider="#b5b5b5"
		android:dividerHeight="1dp"
		android:listSelector="@drawable/list_selector" />

</LinearLayout>